# WolkConnect-Arduino

./: .gitignore  .travis.yml  MQTTClient.h  README.md  WolkConn.cpp  WolkConn.h  keywords.txt  library.properties
.github/workflows/: build.yml
docs/: Doxyfile  Doxyfile.bak
docs/html/: WolkConn_8h.html  WolkConn_8h__incl.map  WolkConn_8h_source.html  annotated.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  struct__wolk__ctx__t.html
docs/latex/: WolkConn_8h.tex  WolkConn_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  refman.tex  struct__wolk__ctx__t.tex
docs/templates/: DoxygenLayout.xml  new_footer.html  new_header.html  new_stylesheet.css
examples/FullExample/: FullExample.ino  README.md  full-example-manifest.json
examples/GenuinoSensorReading/: GenuinoSensorReading.ino
examples/NodeMcu/: Arduino-manifest.json  NodeMcu.ino  sketch_nodemcu_wolk.ino
examples/SensorsAndActuators/: SensorsActuatorsAlarms-manifest.json  SensorsAndActuators.ino
examples/SimpleExample/: SimpleExample.ino
examples/e8266-SSL/: CaCert.ino  e8266-SSL.ino
examples/full_feature_set/: Full-example-deviceTemplate.json  README.md  full-example-deviceTemplate.json  full_feature_set.ino
extras/: Doxyfile
src/: MQTTClient.cpp  MQTTClient.h  WolkConn.cpp  WolkConn.h
src/model/: attribute.c  (+11 more)
tests/: CMakeLists.txt  OutboundMessageFactoryTest.cpp  parser.cpp
utility/: WolkQueue.cpp  WolkQueue.h  actuator_command.cpp  actuator_command.h  configuration_item.cpp  configuration_item.h  configuration_item_command.cpp  configuration_item_command.h  jsmn.cpp  json_parser.cpp  json_parser.h  manifest_item.cpp  manifest_item.h  mqtt_parser.cpp  mqtt_parser.h  parser.cpp  parser.h  parser_example.cpp  parser_example.h  reading.cpp  reading.h  size_definitions.h  wolk_utils.h
(+101 files in other folders)
